--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,45 @@
-body{
+*,*::before,*::after{
+    box-sizing:border-box;
+}
+body,html{
     margin:0;
+    padding:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.8);
+
+     .modal-wrapper {
+         width: 600px;
+         min-width:65%;
+         max-width: calc( 100vw - 20px);
+         max-height: calc(100vh - 20px);
+         padding:20px;
+         overflow: auto;
+         background-color: #fff;
+         position: relative;
+     }
+     .js-modal-close{
+         background-color: transparent;
+         border: none;
+         cursor: pointer;
+         position: absolute;
+         top: 10px;
+         right: 10px;
+         padding: 5px;
+         img{
+             display: block;
+             max-width: 100%;
+             height: auto;
+         }
+
+     }
 }
